@@ -1,5 +1,5 @@
 ##
-# File:    ExecUtilsTests.py
+# File:    ExecProcessStatusTests.py
 # Author:  J. Westbrook
 # Date:    25-Jan-2020
 # Version: 0.001
@@ -7,7 +7,7 @@
 # Updates:
 ##
 """
-Test cases for subprocess execution wrapper
+Test cases for process status info methods
 """
 __docformat__ = "restructuredtext en"
 __author__ = "John Westbrook"
@@ -16,10 +16,11 @@ __license__ = "Apache 2.0"
 
 import logging
 import os
+import pprint
 import time
 import unittest
 
-from rcsb.utils.io.ExecUtils import ExecUtils
+from rcsb.utils.io.ProcessStatusUtil import ProcessStatusUtil
 
 HERE = os.path.abspath(os.path.dirname(__file__))
 TOPDIR = os.path.dirname(os.path.dirname(os.path.dirname(HERE)))
@@ -29,15 +30,12 @@ logger = logging.getLogger()
 logger.setLevel(logging.INFO)
 
 
-class ExecUtilsTests(unittest.TestCase):
+class ProcessStatusTests(unittest.TestCase):
     """
-    Test cases for subprocess execution wrapper -
+    Test cases for  process status info methods
     """
 
     def setUp(self):
-        self.__workPath = os.path.join(HERE, "test-output")
-        self.__testFilePath = os.path.join(self.__workPath, "TEST-REMOVE-SUBPROCESS-OUT.TXT")
-        #
         self.__startTime = time.time()
         logger.debug("Starting %s at %s", self.id(), time.strftime("%Y %m %d %H:%M:%S", time.localtime()))
 
@@ -45,27 +43,26 @@ class ExecUtilsTests(unittest.TestCase):
         endTime = time.time()
         logger.debug("Completed %s at %s (%.4f seconds)", self.id(), time.strftime("%Y %m %d %H:%M:%S", time.localtime()), endTime - self.__startTime)
 
-    def testSubprocessExecution(self):
-        """Test case -  subprocess execution
+    def testProcessStatus(self):
+        """Test case -  process status request
         """
         try:
-            exU = ExecUtils()
-            ok = exU.run("/bin/ls", execArgList=["-l", "-a"], outPath=self.__testFilePath, outAppend=True, timeOut=1.0)
-            self.assertTrue(ok)
-            ok = exU.run("/bin/ls", execArgList=["-88", "-a"], outPath=self.__testFilePath, outAppend=True, timeOut=1.0)
-            self.assertFalse(ok)
+            psU = ProcessStatusUtil()
+            psD = psU.getInfo()
+            logger.debug("Process status dictionary \n%s", pprint.pformat(psD, indent=3))
+            self.assertGreater(psD["uptimeSeconds"], 10)
         except Exception as e:
             logger.exception("Failing with %s", str(e))
             self.fail()
 
 
-def suiteExecSubprocess():
+def suiteProcessStatus():
     suiteSelect = unittest.TestSuite()
-    suiteSelect.addTest(ExecUtilsTests("testSubprocessExecution"))
+    suiteSelect.addTest(ProcessStatusTests("testProcessStatus"))
     return suiteSelect
 
 
 if __name__ == "__main__":
     #
-    mySuite = suiteExecSubprocess()
+    mySuite = suiteProcessStatus()
     unittest.TextTestRunner(verbosity=2).run(mySuite)
