@@ -8,3 +8,4 @@ backports.tempfile; python_version < "3.0"
 PyNaCl >= 1.3.0
 requests >= 2.23
 paramiko >=2.7
+psutil >= 5.7.2
