@@ -52,6 +52,7 @@ setup(
         "PyNaCl >= 1.3.0",
         'backports.tempfile; python_version < "3.0"',
         "paramiko >=2.7",
+        "psutil >= 5.7.2",
     ],
     packages=find_packages(exclude=["rcsb.mock-data", "rcsb.utils.tests-io", "rcsb.utils.tests-*", "tests.*"]),
     package_data={
