@@ -74,3 +74,4 @@
 22-Jul-2020  - V0.73 Adjust api nomenclature
 22-Jul-2020  - V0.74 Create destination directory for tarfile unbundling
  1-Aug-2020  - V0.75 Add https protocol StashUtil.fetchBundle()
+24-Aug-2020  - V0.76 Add module ProcessStatusUtil() and related tests.
